[project]
name = "fusion"
version = "1.0.0"
description = "Multi-Model Collaboration Framework: Panel→Judge→Synth, anti-hallucination architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.4"]
playwright = ["playwright>=1.40"]
ddg = ["duckduckgo-search>=6.0"]
yt = ["yt-dlp>=2024.0"]
all = ["fusion[crawl4ai,playwright,ddg,yt]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
fusion = "fusion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
